# icon-studio

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/benches/: bench_engine.rs
src-tauri/icons/: icon.icns
src-tauri/src/: colors.rs  error.rs  fonts.rs  icons.rs  icons_data.json  lib.rs  library.rs  library_data.json  main.rs  templates.rs
src-tauri/src/cli/: analyze.rs  batch.rs  export.rs  mod.rs  variation.rs
src-tauri/src/commands/: adaptive.rs  ai_commands.rs  analysis.rs  animation.rs  brand.rs  canvas.rs  elements.rs  export.rs  fonts.rs  history.rs  iconset.rs  layout.rs  mod.rs  packs.rs  pages.rs  style.rs  symbols.rs  templates.rs  theme_preset_commands.rs  variant_commands.rs
src-tauri/src/engine/: adaptive.rs  ai.rs  analyzer.rs  boolean.rs  brand.rs  builder.rs  codegen.rs  exporter.rs  filter.rs  fontgen.rs  generator.rs  iconset.rs  importer.rs  lottie.rs  mod.rs  optimizer.rs  pack_importer.rs  (+9 more)
src-tauri/tests/: test_ai.rs  test_analyzer.rs  test_builder.rs  test_builder_cache.rs  test_cli.rs  test_colors.rs  test_elements.rs  test_exporter.rs  test_fonts.rs  test_gradient.rs  test_headless.rs  test_history.rs  test_iconset.rs  test_importer.rs  test_integration.rs  test_layout.rs  test_mcp_core.rs  test_mcp_extended.rs  test_mcp_tools.rs  test_new_features.rs  test_project_io.rs  test_render_scale.rs  test_renderer.rs  test_shadow.rs  test_shapes.rs  test_skeleton.rs  test_templates.rs  test_text_measure.rs
(+129 files in other folders)
