[package]
name = "icon-studio"
version = "0.1.0"
description = "A parametric icon/logo generator"
authors = ["IconStudio"]
edition = "2021"

[lib]
name = "icon_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
base64 = "0.22"
palette = "0.7"
fontdb = "0.21"
usvg = "0.44"
resvg = "0.44"
ico = "0.4"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "schemars"] }
schemars = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
image = { version = "0.25", features = ["webp", "gif", "png"], default-features = false }
tokio-tungstenite = "0.24"
futures-util = "0.3"
geo = "0.28"
dirs = "6"
regex = "1"
# allsorts = "0.14"  # Stage 6: icon font generation (not needed for font generation, only parsing)
flate2 = "1"         # Stage 6: WOFF zlib compression
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "bench_engine"
harness = false
